# python-mistery

./: .editorconfig  .pre-commit-config.yaml  .scaraplate.conf  Dockerfile  README.md  dev.sh  pyproject.toml
.github/workflows/: pr-checks.yaml
mistery/: __init__.py  _endpoint.py  client.py  orgs.py
