[tool.poetry]
name = "mistery"
version = "0.0.1"
description = "Python library to interact with the MIST API"
license = "BSD-3-Clause"
authors = ["Andrew Teixeira <teixeira@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/python-mistery"
homepage = "https://github.com/broadinstitute/python-mistery"
keywords = []

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here

configparser = ">=3.5.0"
requests = "*"
toml = "^0.9"

[tool.poetry.dev-dependencies]
bump2version = "*"
coverage = ">=4.4.2"
fixtures = "*"
flake8 = "*"
green = ">=2.12.0"
mock = ">=2.0.0"
pydocstyle = "<4"
pylama = "*"
pylint = "*"
pyyaml = "*"
testtools = "*"
twine = "*"
unittest2 = ">=1.1.0"
wheel = "*"
yamllint = "*"
